# inguitive

./: .gitignore  .replit  CHANGELOG.md  README.md  app.py  llms-full.txt  llms.txt  pyproject.toml  svg.py
.github/workflows/: ci.yml
examples/: chat_app.py  counter_app.py  data_table_app.py  markdown_demo.py  navigation_demo.py  registration_form.py  todo_app.py
examples/templates/: base.html
src/inguitive/: __init__.py  components.py  css.py  fastapi.py  htmx.py  markdown.py  session.py  state.py  svg.py  trigger.py  utils.py
src/inguitive/templates/: base.html
templates/: base.html
tests/: test_async_handlers.py  test_components.py  test_decorators.py  test_form_data_injection.py  test_redis_backend.py  test_session_backends.py  test_session_isolation.py  test_state_isolation.py  test_trigger_args.py  test_utils.py
